# IS601_Module4

./: .coverage  README.md  main.py  pyproject.toml  pytest.ini  setup.py
.github/workflows/: python-app.yml
app/: __init__.py
app/calculation/: __init__.py  calculation.py
app/calculator/: __init__.py  calculator.py
app/operation/: __init__.py  operations.py
calculator_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_calculations.py  test_calculator.py  test_operations.py
